Other languages for homepage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: index
+title: Activity Campaign
+lang: en
+ref: index
 ---
 
 {% capture index %}{% include index.md %}{% endcapture %}
