Better font loading (fixes #14)

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Zilla+Slab|Zilla+Slab+Highlight" rel="stylesheet">
+    <link rel="stylesheet preload" href="https://fonts.googleapis.com/css?family=Open+Sans|Zilla+Slab|Zilla+Slab+Highlight">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
