--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-    <link rel="stylesheet preload" href="https://fonts.googleapis.com/css?family=Open+Sans|Zilla+Slab|Zilla+Slab+Highlight">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans|Zilla+Slab" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Zilla+Slab">
 
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
