Add Pontoon script to enable in-page localization

--- a/public/index.html
+++ b/public/index.html
@@ -83,5 +83,6 @@
         ga('send', 'pageview');
       }
     </script>
+    <script src="https://pontoon.mozilla.org/pontoon.js"></script>
   </body>
 </html>
